[package]
authors = ["Paul Kirth <pk1574@gmail.com>"]
name = "pkalloc"
version = "0.1.0"
build = "build.rs"
links = "pkmalloc"

[lib]
name = "pkalloc"
path = "lib.rs"
test = false
doc = false

[dependencies]
libc = { version = "0.2.8", default-features = false }

[build-dependencies]
cc = "1.0.13"
fs_extra = "1.1"
cmake = "0.1.29"

[features]
debug = []
